# auth_with_role

./: .gitignore  Cargo.toml  README.md  credentials.toml  example.http  hasura_metadata.json  index.html  info.txt  tarpaulin-report.html  todo.txt
gql/: create_allowed_roles.graphql  create_user.graphql  get_user_by_email.graphql  get_user_by_id.graphql  get_user_by_tg_id.graphql  insert_user.graphql  insert_user_attributes.graphql  insert_user_auth_method.graphql  insert_user_role.graphql  query_attribute.graphql  query_auth_method_by_user_id.graphql  query_auth_methods_by_identifier.graphql  update_api_key_user.graphql  users_auth_method_aggregate.graphql
src/: main.rs
src/application/: error_ext.rs  mod.rs  todo.txt
src/application/actions/: mod.rs
src/application/auth/: dto.rs  mod.rs  with_apikey.rs  with_email.rs
src/application/auth_usecase/: dto.rs  mod.rs  with_apikey.rs  with_email.rs
src/application/handlers/: error.rs  message_handler.rs  mod.rs
src/application/proxy/: info.txt  mod.rs  over_http.rs
src/application/sign_up/: dto.rs  mod.rs  with_email.rs
src/application/sign_up_usecase/: with_email.rs
src/conf/: conf.rs  credentials.rs  mod.rs
src/config/: config.rs
src/domain/: errors.rs  mod.rs  todo.txt
src/http/: errors.rs  gql.rs  gql_builder.rs  hasura.rs  http.rs  mod.rs  query_loader.rs
src/infrastructure/: mod.rs  todo.txt
src/interface/: mod.rs  todo.txt
src/jwt/: claims.rs  error.rs  jwt_user.rs  mod.rs  token_manager.rs
src/mock/: hasura_client.rs  http_client.rs  mod.rs  user.rs  user_provider.rs
(+191 files in other folders)
