[package]
name = "auth_with_role"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.10.2"
bcrypt = "0.17.0"
dotenv = "0.15.0"
hex = "0.4.3"
hmac = "0.12.1"
sha2 = "0.10.8"
jsonwebtoken = "9.3.1"
thiserror = "2.0.12"
reqwest = { version = "0.12.15", features = ["json"]}
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
serde_json = "1.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
include_dir = "0.7.4"
lazy_static = "1.5.0"
confi = "0.1.4"
config = "0.15.11"
getset = "0.1.5"
rand = { version = "0.9.1", features = ["std"] }
aes-gcm = "0.10.3"
base64 = "0.22.1"
